openssl (0.9.8k-1) unstable; urgency=low

  * New upstream release
  * Make aes-x86_64.pl use PIC.
  * Fix security issues (Closes: #530400)
    - "DTLS record buffer limitation bug." (CVE-2009-1377)

 -- Kurt Roeckx <kurt@roeckx.be>  Sat, 16 May 2009 17:33:55 +0200

openssl (0.9.8g-16) unstable; urgency=high

  * Properly validate the length of an encoded BMPString and UniversalString
    (CVE-2009-0590)  (Closes: #522002)

 -- Kurt Roeckx <kurt@roeckx.be>  Wed, 01 Apr 2009 22:04:53 +0200

openssl (0.9.8g-15) unstable; urgency=low

  * Internal calls to didn't properly check for errors which
    resulted in malformed DSA and ECDSA signatures being treated as
    a good signature rather than as an error.  (CVE-2008-5077)
  * ipv6_from_asc() could write 1 byte longer than the buffer in case
    the ipv6 address didn't have "::" part.  (Closes: #506111)

 -- Kurt Roeckx <kurt@roeckx.be>  Mon, 05 Jan 2009 21:14:31 +0100

openssl (0.9.8g-14) unstable; urgency=low

  * Don't give the warning about security updates when upgrading
    from etch since it doesn't have any known security problems.
  * Automaticly use engines that succesfully initialised.  Patch
    from the 0.9.8h upstream version.  (Closes: #502177)

 -- Kurt Roeckx <kurt@roeckx.be>  Fri, 31 Oct 2008 22:45:14 +0100

openssl (0.9.8g-13) unstable; urgency=low

  * Fix a problem with tlsext preventing firefox 3 from connection.
    Patch from upstream CVS and part of 0.9.8h.
    (Closes: #492758)

 -- Kurt Roeckx <kurt@roeckx.be>  Sun, 03 Aug 2008 19:47:10 +0200

openssl (0.9.8g-12) unstable; urgency=low

  * add the changelog of the 10.1 NMU to make bugtracking happy

 -- Christoph Martin <Christoph.Martin@Uni-Mainz.DE>  Tue, 22 Jul 2008 14:58:26 +0200

openssl (0.9.8g-11) unstable; urgency=low

  [ Christoph Martin ]
  * updated cs, gl, sv, ru, ro debconf translation (closes: #480926, #480967,
    #482465, #484324, #488595)
  * add Vcs-Svn header (closes: #481654)